tests/compile/test_py.test_invalid_contract.approved.txt
DEBUG: Running 'poetry run puyapy -h' in '{current_working_directory}'
DEBUG: poetry: usage: puya [-h] [-O {0,1,2}] [--output-teal | --no-output-teal]
DEBUG: poetry: [--output-arc32 | --no-output-arc32] [--out-dir OUT_DIR]
DEBUG: poetry: [--log-level {notset,debug,info,warning,error,fatal}] [-g {0,1,2}]
DEBUG: poetry: [--output-awst | --no-output-awst]
DEBUG: poetry: [--output-ssa-ir | --no-output-ssa-ir]
DEBUG: poetry: [--output-optimization-ir | --no-output-optimization-ir]
DEBUG: poetry: [--output-destructured-ir | --no-output-destructured-ir]
DEBUG: poetry: [--output-memory-ir | --no-output-memory-ir]
DEBUG: poetry: [--target-avm-version {10}]
DEBUG: poetry: [--locals-coalescing-strategy {root_operand,root_operand_excluding_args,aggressive}]
DEBUG: poetry: PATH [PATH ...]
DEBUG: poetry: 
DEBUG: poetry: positional arguments:
DEBUG: poetry: PATH
DEBUG: poetry: 
DEBUG: poetry: options:
DEBUG: poetry: -h, --help            show this help message and exit
DEBUG: poetry: -O {0,1,2}, --optimization-level {0,1,2}
DEBUG: poetry: set optimization level (default: 1)
DEBUG: poetry: --output-teal, --no-output-teal
DEBUG: poetry: Output TEAL (default: True)
DEBUG: poetry: --output-arc32, --no-output-arc32
DEBUG: poetry: Output ARC32 application.json (default: True)
DEBUG: poetry: --out-dir OUT_DIR     path for outputting artefacts (default: False)
DEBUG: poetry: --log-level {notset,debug,info,warning,error,fatal}
DEBUG: poetry: Minimum level to log to console (default: info)
DEBUG: poetry: -g {0,1,2}, --debug-level {0,1,2}
DEBUG: poetry: debug information level (default: 1)
DEBUG: poetry: --output-awst, --no-output-awst
DEBUG: poetry: output parsed result of AST (default: False)
DEBUG: poetry: --output-ssa-ir, --no-output-ssa-ir
DEBUG: poetry: output IR in SSA form (default: False)
DEBUG: poetry: --output-optimization-ir, --no-output-optimization-ir
DEBUG: poetry: output IR after each optimization (default: False)
DEBUG: poetry: --output-destructured-ir, --no-output-destructured-ir
DEBUG: poetry: output IR after SSA destructuring and before codegen
DEBUG: poetry: (default: False)
DEBUG: poetry: --output-memory-ir, --no-output-memory-ir
DEBUG: poetry: output MIR before lowering to TealOps (default: False)
DEBUG: poetry: --target-avm-version {10}
DEBUG: poetry: --locals-coalescing-strategy {root_operand,root_operand_excluding_args,aggressive}
DEBUG: poetry: Strategy choice for out-of-ssa local variable
DEBUG: poetry: coalescing. The best choice for your app is best
DEBUG: poetry: determined through experimentation (default:
DEBUG: poetry: root_operand)
DEBUG: Running 'poetry run puyapy {temp_output_directory}/contract.py --out-dir {temp_output_directory}/output' in '{current_working_directory}'
DEBUG: poetry: {temp_output_directory}/contract.py:7 error: "type[Txn]" has no attribute "application_args_invalid"  [attr-defined]
DEBUG: poetry: name = Txn.application_args_invalid(0)
DEBUG: poetry: ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
DEBUG: poetry: {temp_output_directory}/contract.py:7 error: Expression has type "Any"  [misc]
DEBUG: poetry: name = Txn.application_args_invalid(0)
DEBUG: poetry: ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
DEBUG: poetry: {temp_output_directory}/contract.py:8 error: Expression has type "Any"  [misc]
DEBUG: poetry: log(b"Hello, " + name)
DEBUG: poetry: ^~~~~~~~~~~~~~~~~
{temp_output_directory}/contract.py:7 error: "type[Txn]" has no attribute "application_args_invalid"  [attr-defined]
                                                                                                                           name = Txn.application_args_invalid(0)
                                                                                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
{temp_output_directory}/contract.py:7 error: Expression has type "Any"  [misc]
                                                                                                                           name = Txn.application_args_invalid(0)
                                                                                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{temp_output_directory}/contract.py:8 error: Expression has type "Any"  [misc]
                                                                                                                           log(b"Hello, " + name)
                                                                                                                               ^~~~~~~~~~~~~~~~~

An error occurred during compile. Ensure supplied files are valid PuyaPy code before retrying.
